# tinycoffee

./: .gitignore  .gitmodules  .lite_project.lua  .lite_workspace.lua  .travis.yml  CMakeLists.txt  CMakeLists.txt.old  LICENSE  Makefile  README.md  build-release.sh  build.sh  cembed.c  embed  glfw.c  main.c  main.wren  main1.lua  out.h  project.json  release.c  release.sh  resourcemanager.c  tico-icon.png.h  tileset.json
assets/basis33/: LICENSE.txt  README.txt
docs/: lua_reference.md  packaging.md
examples/: main.lua
examples/Gravity/: Gravity.love  carrot.ase  carrot.lua  conf.lua  config.json  main.lua  planet-angry.ase  planet-face.ase  planet.ase  planet.lua  player.lua  rabbit.ase  rabiscos.ase  spaceman.ase
examples/level/: config.json  editor.json  main.lua  project.tico  resources (cópia).json  resources.json  tilemap.json  tileset.json
examples/level/assets/: tileset.json
examples/level/components/: gravity.lua  hitbox.lua  position.lua  sprite.lua  velocity.lua
examples/level/entities/: entity.lua  floor.lua  lizard.lua  player.lua
examples/level/libs/: canvas.lua  input.lua  sprite.lua  vector.lua
examples/level/systems/: gravitysystem.lua  inputsystem.lua  kinematicsystem.lua  movesystem.lua  spritesystem.lua
examples/metroidvania/: .lite_project.lua  .lite_workspace.lua  conf.lua  config.json  main.lua  main.lua.bkp  main.wren  tilemap.json  tilemap.lua  tileset.json
examples/metroidvania/assets/: map.json  map.lua
examples/metroidvania/components/: camera.lua  goblinai.lua  hitbox.lua  input.lua  kinematic.lua  patrol.lua  player.lua  position.lua  slimeai.lua  sprite.lua  target.lua
examples/metroidvania/entities/: camera.lua  enemy.lua  floor.lua  goblin.lua  knight.lua  slime.lua
examples/metroidvania/libs/: camera.lua  canvas.lua  class.lua  packer.lua  sprite.lua  utils.lua
examples/metroidvania/scenes/: gamescene.lua  map.lua  scene.lua
examples/metroidvania/systems/: camerasystem.lua  drawsystem.lua  goblinsystem.lua  gravitysystem.lua  kinematicsystem.lua  movesystem.lua  patrolsystem.lua  physicssystem.lua  playerinputsystem.lua  slimesystem.lua  spritesystem.lua
examples/platformer/: main.lua  object.lua  player.lua
examples/wren/: config.json  main.wren
include/: audio.h  definitions.h  engine.h  filesystem.h  graphics.h  input.h  json.h  plugin.h  render.h  serialization.h  serialization.h.old  table.h  tico.h  tico_imgui.h  tico_math.h  timer.h  utils.h  window.h
include/plugins/: editor.h  resources.h  tclua.h
include/plugins/editor/: grid.h  image.h  object.h  scene.h  tilemap.h  tileset.h  widget.h
include/plugins/lua/: audio.h  editor.h  engine.h  filesystem.h  graphics.h  imgui.h  init.lua  init.lua.h  input.h  json.h  math.h  resources.h  timer.h  window.h
include/plugins/resources/: image.h  json.h  object.h  sprite.h  tilemap.h  tileset.h
scripts/: enemy.wren  entity.wren  player.wren  scene.wren
src/: audio.c  audio.h  core.c  debug.h  editor.c  engine.c  filesystem.c  filesystem.h  font.c  font.h  font_data.h  fs.h  graphics.c  graphics.h  input.c  input.h  json.c  json.c.old  lua.c  math.c  miniaudio.c  plugin.c  render.c  render.h  resourcemanager.c  resources.c  serialization.c  serialization.c.old  tclua.c  tclua.h  tcmath.h  tctypes.h  tcwren.c  tcwren.h  texture.c  tico-icon.png.h  tico.h  tico_math.c  timer.c  tinycoffee.h  (+7 more)
src/editor/: editor.c
src/editors/: editor.c  editor.h
src/libs/: init.lua  lua_libs.h  sprite.lua  utils.lua  vector.lua
src/modules/: camera.c  camera.h  modules.h  tcmicroui.h
src/modules/wren/: audio.h  fs.h  graphics.h  input.h  math.h  module.h  (+2 more)
src/plugins/: editor.h  resource.h
src/shaders/: gba.frag  gba.frag.h  outline.frag  outline.frag.h
src/sources/: filesystem.c  font.c  graphics.c  tclua.c  tcwren.c
src/ui/: microui.c  microui.h  tcui.c  tcui.h
(+66 files in other folders)
